src/main/kubernetes/database.yml
apiVersion: v1
kind: Namespace
metadata:
  name: custom
---
apiVersion: v1
kind: Service
metadata:
  namespace: custom
  name: db-service
spec:
  selector:
    role: db
  ports:
    - port: 5432
      nodePort: 30003
      targetPort: 5432
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: custom
spec:
  replicas: 1
  selector:
    matchLabels:
      role: db
  template:
    metadata:
      labels:
        role: db
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
