src/main/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: custom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: yonder-app
      http:
        paths:
          - path: /*
            backend:
              serviceName: app-service
              servicePort: 8080
